# Projet_archilog_GestionnaireDeCagnotte

./: .gitignore  README.md  pyproject.toml
src/archilog/: __init__.py  cli.py  config.py  data.py  domain.py  views.py
src/archilog/static/css/: style.css
src/archilog/static/js/: depenses.js  home.js  main.js  selection.js
src/archilog/templates/: base.html  macros.html
src/archilog/templates/components/: footer.html  modal_delete_depenses.html  modal_edit_depense.html  tabs.html  toast.html
src/archilog/templates/pages/cagnotte_details/: cagnotte.html  depenses.html  edit_depense.html  equilibre_depenses.html  import_csv.html  new_depense.html
src/archilog/templates/pages/cagnottes/: confirm_delete.html  home.html  new_cagnotte.html
tests/: __init__.py  conftest.py  test_cli.py  test_domain.py  test_routes.py  test_smoke.py
